[package]
name = "pantsu_tags"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.26.1"
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
select = "0.5"
thiserror = "1.0"
directories = "4.0.1"