[package]
name = "pantsu_tags"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "pantsu-tags"
path = "src/main.rs"

[dependencies]
rusqlite = "0.26.1"
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
select = "0.5"
thiserror = "1.0"
directories = "4.0.1"
enum-iterator = "0.7.0"
image = "0.23.14"
lz_fnv = "0.1.2"
blockhash = "0.3.0"
structopt = "0.3.25"
colored = "2.0.0"

[dev-dependencies]
serial_test = "0.5.1"

[build-dependencies]
structopt = "0.3.25"