[package]
name = "pantsu_tags"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.26.1", features = [] }
reqwest = { version = "0.11", features = ["blocking", "multipart"] }
tokio = { version = "1.21.2", features = ["fs", "macros"] }
futures = "0.3.25"
select = "0.5"
image_compressor = "1.2.3"
thiserror = "1.0"
directories = "4.0.1"
enum-iterator = "0.7.0"
image = "0.23.14"
lz_fnv = "0.1.2"
blockhash = "0.3.0"
regex = "1.5.4"
mime_guess = "2.0.4"
log = "0.4.17"
chrono = "0.4.23"
lazy_static = "1.4.0"

[dev-dependencies]
serial_test = "0.5.1"