[package]
name = "pantsu_tags_cli"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pantsu_tags = { path = "../pantsu_tags" }
structopt = "0.3.25"
colored = "2.0.0"
thiserror = "1.0"

[dev-dependencies]
serial_test = "0.5.1"

[build-dependencies]
structopt = "0.3.25"