[package]
name = "pantsu_tags_cli"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "pantsu-tags"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pantsu_tags = { path = "../pantsu_tags" }
clap = { version = "3.1.18", features = ["derive"] }
colored = "2.0.0"
thiserror = "1.0"
which = "4.2.2"

[dev-dependencies]
serial_test = "0.5.1"

[build-dependencies]