[package]
name = "pantsu_tags_cli"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "pantsu-tags"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pantsu_tags = { path = "../pantsu_tags" }
clap = { version = "3.1.18", features = ["derive"] }
colored = "2.0.0"
thiserror = "1.0"
which = "4.2.2"
serde = "1.0.137"
serde_derive = "1.0.137"
figment = { version = "0.10.6", features = ["yaml"] }
directories = "4.0.1"
lazy_static = "1.4.0"
log = "0.4.17"
log4rs = { version = "1.2.0", features = ["file_appender", "console_appender"]}

[dev-dependencies]
serial_test = "0.5.1"

[build-dependencies]
pantsu_tags = { path = "../pantsu_tags" }
clap = "3.2.5"
clap_generate = "3.0.3"